A user can increase an ideas rating to a maximum of 2

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,5 +27,6 @@
     Ideas.loadAll();
     $('.ideas').on('click', 'button.edit', Ideas.showForm);
     $('.ideas').on('click', 'button.delete', Ideas.delete);
+    $('.ideas').on('click', 'button.thumbsUp', Ideas.ratingUp);
   });
 </script>
