User can downvote an idea to a minimum of Swill/0

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,5 +28,6 @@
     $('.ideas').on('click', 'button.edit', Ideas.showForm);
     $('.ideas').on('click', 'button.delete', Ideas.delete);
     $('.ideas').on('click', 'button.thumbsUp', Ideas.ratingUp);
+    $('.ideas').on('click', 'button.thumbsDown', Ideas.ratingDown);
   });
 </script>
