--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,18 @@
 
 <%= yield %>
 
+<script>
+  $(function() {
+    $('form#createIdea').submit(Ideas.create);
+    $('form#secretForm').submit(Ideas.update);
+    Ideas.loadAll();
+    $('.ideas').on('click', 'button.edit', Ideas.showForm);
+    $('.ideas').on('click', 'button.delete', Ideas.delete);
+    $('.ideas').on('click', 'button.thumbsUp', Ideas.ratingUp);
+    $('.ideas').on('click', 'button.thumbsDown', Ideas.ratingDown);
+    $('input[name=search]').keyup(Ideas.search)
+  });
+</script>
+
 </body>
 </html>
